tests/warn/aliases3/B.stk
namespace B

import A.Inner  // OK
import io.*
import io.a.b.*

alias io.*  // error
alias io.a.b.*  // error

section Inner
  type Flags = Int
end

alias A.Inner.Flags
